[project]
name = "example-service"
version = "0.1.0"
description = "FastAPI service template following standard architecture"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
keywords = [
    "fastapi",
    "async",
    "microservice",
    "graphql",
    "sqlalchemy",
    "opentelemetry",
    "taskiq",
    "strawberry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
requires-python = ">=3.13"

dependencies = [
    # Core FastAPI framework
    "fastapi>=0.122.0",
    "uvicorn[standard]>=0.34.0",
    # Data validation and settings
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Database and ORM
    "alembic-postgresql-enum>=1.8.0",
    "alembic>=1.17.2",
    "psycopg[binary,pool]>=3.2.0",
    "sqlalchemy[asyncio]>=2.0.44",
    # Caching
    "redis[hiredis]>=5.1.0",
    # HTTP clients
    "httpx>=0.28.1",
    # Monitoring and metrics
    "prometheus-client>=0.21.0",
    # File uploads
    "python-multipart>=0.0.12",
    # CLI framework
    "click>=8.1.0",
    # OpenTelemetry
    "opentelemetry-api>=1.28.0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "opentelemetry-instrumentation-psycopg>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "opentelemetry-sdk>=1.28.0",
    # Messaging and Tasks
    "apscheduler>=3.10.0",
    "faststream[otel,prometheus,rabbit]>=0.6.0",
    "taskiq-aio-pika>=0.4.4",
    "taskiq-faststream>=0.3.0",
    "taskiq-postgresql>=0.4.0",
    "taskiq-redis>=1.1.2",
    "taskiq>=0.11.0",
    # GraphQL
    "strawberry-graphql[fastapi]>=0.235.0",
    # Sanitization helpers
    "bleach>=6.2.0",
    "defusedxml>=0.7.1",
    # Date and time utilities
    "python-dateutil>=2.9.0",
    # Authentication and security

    "pwdlib[argon2]>=0.3.0",
    # Email
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
    "aioboto3>=13.2.0",
    # Utilities
    "frozendict>=2.4.0",
    "netifaces>=0.11.0",
    "uuid-utils>=0.7.0",
    "ipython>=8.28.0",
    "phonenumbers>=9.0.19",
    # File processing
    "pillow>=10.4.0",
    # YAML support
    "pyyaml>=6.0.0",
    # AI/ML
    "instructor>=1.13.0",
]

[project.optional-dependencies]
auth = ["accent-auth-client"]
# Excel support
excel = ["openpyxl>=3.1.0"]
# AI/ML dependencies
ai = ["openai>=1.50.0", "anthropic>=0.39.0", "deepgram-sdk>=3.7.0"]
# Cryptographic support for EncryptedString/EncryptedText types
crypto = ["cryptography>=41.0.0"]


# === UV Configuration ===
[tool.uv]
default-groups = ["dev", "tests", "loadtest"]

[tool.uv.sources]
accent-auth-client = { path = "../accent-voice2/library/accent-auth-client" }


[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    # Type stubs for better type checking
    "types-pyyaml>=6.0.12.20250915",
    "types-python-dateutil>=2.9.0.20251115",
    "types-redis>=4.6.0.20241004",
    "types-openpyxl>=3.1.0",
    "types-requests>=2.32.0.20241016",
    "types-aioboto3>=15.5.0",
]
tests = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.6.0",                            # Parallel test execution
    "pytest-timeout>=2.3.0",                          # Test timeout support
    "pytest-benchmark>=4.0.0",
    "aiosqlite>=0.20.0",
    "testcontainers[postgres,redis,rabbitmq]>=4.9.0",
    "httpx>=0.28.1",
]
loadtest = ["locust>=2.29.0"]

[project.scripts]
# === Console Scripts ===
# Main entry points for the application
#
# Usage:
#   uv run example-service <command>              # CLI with all commands
#   uv run example-service-server                 # Run FastAPI server
#
# Examples:
#   uv run example-service-server                 # Start FastAPI app
#   uv run example-service --help                 # Show all commands
#   uv run example-service db upgrade             # Database migrations
#   uv run example-service config validate        # Validate configuration
#   uv run example-service dev quality            # Run quality checks
#   uv run example-service cache clear            # Clear Redis cache
#   uv run example-service tasks list             # List background tasks

example-service = "example_service.cli:main"
example-service-server = "example_service.main:run_fastapi_server"

[project.entry-points.taskiq_cli]
track = "example_service.infra.tasks.cli:TrackingCommand"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "example_service/static/docs/**",
    "example_service/static/graphql/**",
]

[tool.hatch.build.targets.sdist]
include = ["example_service"]

[tool.hatch.build.targets.wheel]
packages = ["example_service"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_functions = ["test_*", "*_test"]
python_classes = ["Test*", "*Tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    # Verbose output
    "-v",
    # Show extra test summary info
    "-ra",
    # Strict markers (fail on unknown markers)
    "--strict-markers",
    # Strict config (fail on unknown config options)
    "--strict-config",
    # Show local variables in tracebacks
    "--showlocals",
    # Shorter tracebacks
    "--tb=short",
    # Show durations of slowest tests
    "--durations=10",
    # Coverage options
    "--cov=example_service",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:coverage/html",
    "--cov-report=xml:coverage/coverage.xml",
    "--cov-branch",
    "--cov-fail-under=80",
    # Disable pytest-cov warning on failure
    "--no-cov-on-fail",
    # Parallel execution
    "-n=auto",
    "--dist=worksteal",
    # Other options
    "--maxfail=5",
    "--color=yes",
    "--timeout=300",
    "--ignore=**/examples/*",
]
console_output_style = "progress"
markers = [
    # Basic categories
    "unit: Unit tests (fast, isolated, <100ms)",
    "integration: Integration tests (external dependencies, 1-10s)",
    "functional: Functional tests (end-to-end scenarios)",
    "e2e: End-to-end tests (full system integration)",
    # Performance and load
    "performance: Performance tests (load, stress, benchmarks)",
    "slow: Tests that take more than 5 seconds",
    "stress: Stress tests (high load, resource intensive)",
    "benchmark: Performance benchmark tests",
    # Infrastructure dependencies
    "network: Tests that require network access",
    "database: Tests that require database connection",
    "redis: Tests that require Redis connection",
    "rabbitmq: Tests that require RabbitMQ",
    "docker: Tests that require Docker containers",
    # Test types
    "async: Async-specific tests",
    "asyncio: Async tests",
    "api: API endpoint tests",
    "auth: Authentication and authorization tests",
    "security: Security and vulnerability tests",
    "migration: Database migration tests",
    "config: Configuration management tests",
    "webhook: Webhook functionality tests",
    "websocket: WebSocket connection tests",
    # Quality assurance
    "smoke: Basic smoke tests for CI",
    "regression: Regression tests for specific bugs",
    "flaky: Tests that are known to be flaky",
    "property: Property-based tests using Hypothesis",
    "snapshot: Snapshot tests using Syrupy",
]
norecursedirs = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "htmlcov",
    "logs",
    "examples",
]

# Logging configuration
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Filter warnings
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
    "ignore:.*coroutine.*was never awaited:RuntimeWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore:.*sqlalchemy.*:UserWarning",
    "ignore:.*SAWarning.*:sqlalchemy.exc.SAWarning",
    "ignore:.*pydantic.*:UserWarning",
]

[tool.coverage.run]
source_pkgs = [
    "example_service.app",
    "example_service.core",
    "example_service.features",
]
branch = true
parallel = true
concurrency = ["multiprocessing"]
omit = [
    "*/tests/*",
    "**/tests/*",
    "**/test_*.py",
    "**/conftest.py",
    "**/main.py",
    "**/init_db.py",
    "**/migrations/*",
    "**/alembic/*",
    "**/__init__.py",
    "*/example_service/cli/*",
    "*/example_service/workers/*",
    "*/example_service/infra/messaging/*",
    "*/example_service/infra/tasks/*",
    "*/example_service/infra/storage/*",
    "*/example_service/infra/email/*",
    "*/example_service/infra/logging/*",
    "*/example_service/infra/tracing/*",
    "*/example_service/infra/metrics/*",
    "*/example_service/infra/realtime/*",
    "*/example_service/infra/discovery/*",
    "*/example_service/infra/results/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "@overload",
    # Debug/logging
    "logger.debug",
    "if settings.debug",
]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
fail_under = 80

[tool.coverage.html]
directory = "coverage/html"

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"
respect-gitignore = true
exclude = [
    # Version control
    ".git",
    ".git-rewrite",
    ".bzr",
    ".hg",
    ".svn",
    # Virtual environments and package directories
    ".venv",
    "__pypackages__",
    "site-packages",
    # Python cache and build artifacts
    "__pycache__",
    "*.egg-info",
    ".eggs",
    "_build",
    "build",
    "dist",
    # Cache directories
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    ".pytype",
    # Development tools
    ".direnv",
    ".ipynb_checkpoints",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".tox",
    ".vscode",
    # Project-specific exclusions
    "**/examples/*",
    "scripts",
    "**/alembic/**",
    "**/migrations/**",
    "temp",
    # Other
    "node_modules",
    "buck-out",
]
extend-exclude = ["test_.*\\.py"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88
indent-style = "space"
line-ending = "auto"
preview = true
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
ignore = [
    # Documentation - add incrementally
    "D301", # Escape sequence in docstring - don't force r-strings
    # Type annotations - balanced approach
    "ANN401", # Dynamically typed expressions (Any)
    # Formatting
    "E501", # Line too long (handled by formatter)
    # Security - practical exceptions
    "S104", # Possible binding to all interfaces - intentional for dev
    "S105", # Hardcoded password - false positives
    "S106", # Hardcoded password in function argument
    "S311", # Pseudo-random generator - acceptable for non-crypto
    # Code patterns
    "PLC0415",
    "FBT001",
    "FBT002",
    # Broad exception handling is intentional in CLI/middleware to preserve UX
    "BLE001",
    # FastAPI dependencies often need many parameters
    "PLR0913",
    # Logging consistently uses f-strings with contextual data
    "G004",
    # Graceful fallbacks frequently use try/except without else blocks
    "TRY300",
    # Magic-value checks are explicit for readability
    "PLR2004",
    # Global configuration switches rely on module-level state
    "PLW0603",
    # Tests and schema factories often mirror builtin names for clarity
    "A002",
    # Verbose log messages are expected in operational tooling
    "TRY401",
    # Private attributes are accessed intentionally when extending frameworks
    "SLF001",
    # Blanket ignores are used to manage optional dependencies in tests
    "PGH003",
    # Complex middleware and routers naturally have additional branches/returns
    "PLR0912",
    "PLR0911",
    "PLR0915",
    # Datetime helpers manage tzinfo explicitly elsewhere
    "DTZ003",
    "DTZ001",
    # CLI commands use pathlib.open sparingly inside sync helpers
    "PTH123",
    # Some async commands shell out to blocking helpers by design
    "ASYNC230",
    # Dynamic model factories intentionally use capitalized temporary names
    "N806",
    # Large router/middleware implementations exceed cyclomatic heuristics
    "C901",
    # Boolean positional args are used heavily in CLI/middleware factories
    "FBT003",
    # Public __init__ docstrings add little value; prefer class docs
    "D107",
    # FastAPI dependencies intentionally leverage direct callables
    "FAST002",
    # Some try/except blocks purposefully raise inside for context preservation
    "TRY301",
    # CLI helpers accept unused args to match Click signatures
    "ARG001",
    "ARG002",
    # Logging helpers intentionally capture exception info manually
    "G201",
    # Custom exceptions often derive directly from Exception
    "TRY002",
    # Global state toggles may be declared prior to assignment
    "PLW0602",
    # Mutable class vars intentionally used for registries
    "RUF012",
    # Datetime tzinfo handled at higher layers
    "DTZ005",
    "DTZ007",
    # Tests purposely redefine fixtures and functions
    "F811",
    # Structured logging merges context that overlaps with reserved keys
    "G101",
    # Runtime stubs for typing leverage simplified annotations
    "PYI036",
    # Builtin names reused intentionally in tests/factories
    "A001",
    # Async helpers may wrap blocking operations with instrumentation
    "ASYNC109",
    "ASYNC221",
    # Naming patterns follow framework conventions
    "N802",
    "N801",
    "N811",
    "N818",
    # pytest asserts intentionally catch general Exception types
    "B017",
    # Type stubs follow runtime conventions rather than strict PEP 563
    "PYI063",
    # Assert statements used deliberately for invariants
    "S101",
    # Raw SQL helpers validated elsewhere
    "S608",
    # CLI utilities intentionally shell out with precise commands
    "S603",
    "S607",
    # pytest parameters frequently specify defaults for readability
    "PT028",
]

[tool.ruff.lint.per-file-ignores]
# Lifespan module: lifecycle management uses global state and broad exception handling
"**/app/lifespan.py" = [
    "BLE001",  # Blind exception handling - intentional for graceful degradation
    "PLW0602", # Global statement for reading - intentional for state tracking
    "PLW0603", # Global statement for writing - intentional for state tracking
    "S110",    # Try-except-pass - intentional in health check functions
    "C901",    # Function too complex - health monitor has many service checks
    "PLR0915", # Too many statements - lifecycle management is inherently complex
]

# Alembic migrations: relax rules for autogenerated code
"alembic/versions/*.py" = [
    "F401",   # Unused imports - op/sa imported for convenience
    "ARG001", # Unused function argument - empty upgrade/downgrade
    "E501",   # Line too long - autogenerated table definitions
    "I001",   # Import block is unsorted/unformatted
    "UP007",  # Use X | Y for type annotations (migrations may target older Python)
    "INP001", # Implicit namespace package - Alembic discovers migrations dynamically, no __init__.py needed
    "D415",   # First line should end with punctuation - autogenerated docstrings
]
# Alembic env.py: configuration file with specific patterns
"alembic/env.py" = [
    "F401", # Unused imports - may be used in generated migrations
    "E402", # Module level import not at top of file
]
# Test files: more relaxed rules for fixtures and test patterns
"tests/**/*.py" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",    # No docstrings in tests
    "INP001",  # Import sorting
    "S101",    # Use of assert
    "S105",    # Possible hardcoded password
    "S106",    # Possible hardcoded password in function call
    "PLR2004", # Magic value in comparison
    "SLF001",  # Private member access (common in tests)
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN202",  # Type annotations
    "RET503",  # Missing explicit return
    "ARG001",
    "ARG002",  # Unused arguments
    "ARG005",  # Unused lambda argument - test assertions
    "F401",    # Unused imports
    "B008",    # Function call in default argument
    "PT011",
    "PT012",
    "PT017",
    "PT022",   # pytest specific
    "DTZ005",  # datetime.now() called without tz
    "C901",    # Function is too complex
    "FAST002", # FastAPI dependency without Annotated
    "S110",    # try-except-pass - intentional in tests for failure path testing
    "S603",    # subprocess call - safe in test fixtures (e.g., Docker CLI)
    "S608",    # SQL injection - false positive for test query simulation
    "SIM102",  # Use a single if statement instead of nested if - readability in test assertions
    "SIM116",  # Use a dictionary instead of consecutive if - readability in test mocks
    "SIM117",  # Use single with statement - readability in tests
    "RUF012",  # Mutable ClassVar - false positive for SQLAlchemy __table_args__
    "ANN204",  # Missing return type annotation for special method
    "FBT003",  # Boolean positional value in function call
    "PLR0913", # Too many arguments in function definition
]
# Test conftest files: fixture definitions have specific patterns
"tests/**/conftest.py" = [
    "F401", # Unused import - fixtures imported for pytest registration
    "F811", # Redefinition of unused name - fixture overrides
]
# Database utilities: use validated identifiers (safe_table_reference, validate_identifier)
# SQL identifiers cannot be parameterized, so validated identifiers are used in f-strings
"example_service/core/database/search/utils.py" = [
    "S608", # SQL injection - false positive, identifiers validated via safe_table_reference
]
"example_service/core/database/search/mixins.py" = [
    "S608", # SQL injection - false positive, identifiers validated via safe_table_reference/validate_identifier
]
"example_service/infra/database/schema.py" = [
    "S608", # SQL injection - false positive, identifiers validated via safe_table_reference/validate_identifier
]
"example_service/cli/commands/search.py" = [
    "S608", # SQL injection - false positive, identifiers validated via safe_table_reference
]
# Tools/scripts: CLI tools and linting utilities
"tools/**/*.py" = [
    "T201",   # print statements - common in CLI tools
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "ARG001", # Unused function argument - common in CLI tools
    "ARG002", # Unused function argument - common in CLI tools
    "S101",   # Use of assert - acceptable in tools
    "INP001", # Import sorting - less critical for tools
    "EXE001", # Executable found in library code - common in CLI tools
    "D107",   # Missing docstring in __main__
    "ANN204", # Missing type annotation for return value
]

[tool.ruff.lint.flake8-type-checking]
# Declarative base classes must see annotations at runtime (e.g. datetime, uuid)
runtime-evaluated-base-classes = [
    "example_service.core.database.Base",
    "example_service.core.database.TimestampedBase",
    "example_service.core.database.UUIDTimestampedBase",
    "example_service.core.database.AuditedBase",
]


[tool.ruff.lint.isort]
known-first-party = ["example_service"]
split-on-trailing-comma = true
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.13"
files = ["example_service", "tests", "alembic"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
# Strawberry GraphQL plugin for proper type checking of @strawberry decorators
# Pydantic plugin for proper type checking of Pydantic models
plugins = ["strawberry.ext.mypy_plugin", "pydantic.mypy"]
# Settings inspired by Strawberry's own mypy configuration
implicit_reexport = false
strict_optional = true
show_error_codes = true
install_types = false
show_traceback = true
pretty = true
namespace_packages = true
exclude = ["^alembic/env\\.py$", ".*/examples/.*", "^scripts/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
# Strawberry GraphQL decorators add fields/methods at runtime
# The strawberry.ext.mypy_plugin helps, but some patterns still need relaxed checking
# These overrides can potentially be reduced as the plugin improves
module = "example_service.features.graphql.types.*"
disable_error_code = [
    "call-arg",
    "attr-defined",
    "misc",
    "import-not-found",
    "no-any-return",
    "no-untyped-def",
    "type-var",
    "valid-type",
    "name-defined",
]

[[tool.mypy.overrides]]
# GraphQL resolvers may need relaxed checking for dynamic schema composition
# The strawberry.ext.mypy_plugin helps with standard patterns
module = "example_service.features.graphql.resolvers.*"
disable_error_code = [
    "call-arg",
    "attr-defined",
    "import-not-found",
    "no-any-return",
    "assignment",
    "arg-type",
    "valid-type",
    "comparison-overlap",
    "name-defined",
]

[[tool.mypy.overrides]]
module = "example_service.features.graphql.*"
disable_error_code = ["import-not-found"]

[[tool.mypy.overrides]]
# Extensions, validators, dataloaders and caching have pre-existing type annotation gaps
# Plus strawberry-specific patterns (enums, unions, JSON scalars)
module = [
    "example_service.features.graphql.extensions.*",
    "example_service.features.graphql.validators",
    "example_service.features.graphql.caching.*",
    "example_service.features.graphql.dataloaders.*",
    "example_service.features.graphql.types.pagination",
    "example_service.features.graphql.error_handler",
    "example_service.features.graphql.permissions",
    "example_service.features.graphql.router",
    "example_service.features.graphql.schema",
    "example_service.features.graphql.context",
]
disable_error_code = [
    "no-untyped-def",
    "import-untyped",
    "unused-ignore",
    "no-any-return",
    "arg-type",
    "attr-defined",
    "assignment",
    "operator",
    "valid-type",
    "misc",
    "override",
    "call-overload",
    "comparison-overlap",
    "typeddict-item",
]

[[tool.mypy.overrides]]
module = "alembic.versions.*"
ignore_errors = true

[[tool.mypy.overrides]]
# SQLAlchemy models rely on runtime imports for annotation evaluation
module = "example_service.*.models"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["alembic.*", "alembic.env"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "botocore.*",
    "cryptography.*",
    "dateutil.*",
    "netifaces",
    "yaml",
    "IPython",
]
ignore_missing_imports = true

# Package-specific ignores inspired by Strawberry's mypy configuration
# These packages either lack type stubs or have known type checking issues
[[tool.mypy.overrides]]
module = [
    "graphql.*",            # graphql-core lacks comprehensive type stubs
    "pydantic_core.*",      # Internal Pydantic implementation details
    "rich.*",               # Rich has some type checking gaps
    "libcst.*",             # Code transformation library with type issues
    "email_validator.*",    # Has type checking issues
    "dotenv.*",             # python-dotenv type stubs incomplete
    "cached_property.*",    # Type checking issues with decorators
    "importlib_metadata.*", # Type checking issues
    "anyio.*",              # Async library with some type gaps
    "dns.*",                # DNS library type issues
    "h11.*",                # HTTP/1.1 library type issues
    "httpcore.*",           # HTTP core library type issues
    "idna.*",               # IDNA library type issues
    "markdown_it.*",        # Markdown parser type issues
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "pygments.*", # Syntax highlighting library
]
ignore_missing_imports = true

# Note: We keep pydantic.*, httpx.*, and click.* with full type checking
# as they have good type stubs and the plugins handle them properly

[tool.alembic]
script_location = "alembic"
prepend_sys_path = "."
file_template = "%%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d_%%(rev)s_%%(slug)s"
truncate_slug_length = 40
timezone = "UTC"


[tool.pyright]
exclude = ["**/.venv", "**/*.tmpl"]
ignore = [".venv"]
